--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head> <!--fim da cabeça do site-->
 
 <header>
+    <nav>
+        <ul>
+            <li><a href="index.html">home</a></li>
+            <li><a href=""></a>produtos</li>
+            <li><a href="contato.html"></a>contatos</li>
+        </ul>
+    </nav>
     <img id="banner" src="banner.jpg">
 </header>
 
