--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">home</a></li>
             <li><a href=""></a>produtos</li>
-            <li><a href="contato.html"></a>contatos</li>
+            <li><a href="contato.html">contatos</a></li>
         </ul>
     </nav>
     <img id="banner" src="banner.jpg">
